# YAMC

./: Cargo.toml  Readme.md
src/: main.rs  mapgen.rs
src/map/: blocks.rs  mod.rs
src/map/chunk/: block.rs  block_type.rs  chunk_coordinates.rs  chunk_interaction_plugin.rs  mod.rs
src/map/generator/: biome.rs  chunk.rs  mod.rs  noise_map_wrappers.rs
src/map/generator/noise_maps/: biome_map.rs  cave_map.rs  height_map.rs  mod.rs  resource_map.rs  topping_map.rs  utils.rs
src/map/render/: chunk_coordinates.rs  culled_chunk_mesher.rs  mod.rs  static_voxel_render.rs
src/player/: mod.rs
src/utils/: mod.rs
